objects/Task_Template__c.object
<CustomObject>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allow_Delegation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Allow Delegation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date_Diff_Customer_Response_Date__c</fullName>
        <label>Due Date Diff (Customer Response Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date_Diff_Negotiation_Date__c</fullName>
        <label>Due Date Diff (Negotiation Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_Order__c</fullName>
        <label>Predecessor Task Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Catcher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Catcher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Task_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_Template__c</fullName>
        <label>Route Template</label>
        <referenceTo>Route_Template__c</referenceTo>
        <relationshipLabel>Task Template</relationshipLabel>
        <relationshipName>Task_Template</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date_Diff_Customer_Response_Date__c</fullName>
        <label>Start Date Diff (Customer Response Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date_Diff_Negotiation_Date__c</fullName>
        <label>Start Date Diff (Negotiation Date)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Assignee__c</fullName>
        <label>Task Assignee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Routing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Routing</label>
        <referenceTo>RFQ_Tasks_Routing__c</referenceTo>
        <relationshipLabel>Task Template</relationshipLabel>
        <relationshipName>Task_Template</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Status__c</fullName>
        <label>Task Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Task Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Task Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Template</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>